Refactor and cleanup / Fix unit tests